# clm-evaluetor

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  wrangler.jsonc
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a96e5f1d35e_add_project_task_tracking.py  3b3f773d8f37_add_schema_extraction_fields_to_.py  5c74dd1d4238_add_hybrid_schema_support_tables_and_.py  92b4d0a15c40_add_client_model_and_contract_versioning.py  a0b1c2d3e4f5_add_contract_risk_improvement_source.py  a0b1c2d3e4f5_add_dashboard_cache_tenant_snapshots.py  a1b2c3d4e5f6_add_aws_ses_integration.py  a1b2c3d4e5f6_add_canonical_contract_tables.py  a1b2c3d4e5f6_add_taxonomy_suggestions.py  a1b2c3d4e5f6_global_golden_set.py  a94bb936193e_initial_schema.py  aa01_add_is_demo_to_integrations.py  b1c2d3e4f5g6_add_workflow_models.py  b2c3d4e5f6a7_add_definitions_and_new_clause_types.py  b2c3d4e5f6g7_add_bu_industry_profile.py  c3d4e5f6a7b8_add_process_steps_table.py  cp01_contract_industry_profile.py  ct01_contract_type_to_varchar.py  d4e5f6a7b8c9_add_content_hash.py  dc01_add_dashboard_cache_tenant_snapshots.py  e5f6a7b8c9d0_add_preamble_tables.py  eh01_add_contract_extraction_health.py  eq01_add_extraction_quality.py  eq02_global_golden_set.py  evt01_fix_eventtype_enum.py  f6a7b8c9d0e1_add_exhibit_tables.py  fg01_add_service_portfolio.py  fg02_add_org_hierarchy_officers.py  fg03_add_contract_documents.py  fg04_add_kpi_approval_perf_history.py  fg05_add_snow_sla_sync.py  fg06_add_processing_job_queue.py  g7h8i9j0k1l2_add_sla_tables.py  grp01_contract_groups.py  h1i2j3k4l5m6_add_it_service_clause_types.py  hl01_add_highlight_rects.py  i2j3k4l5m6n7_increase_section_number_length.py  ip01_add_industry_profiles.py  ip02_profile_owner_tenant.py  j3k4l5m6n7o8_add_sla_benchmark_fields.py  (+25 more)
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/actions/: __init__.py  handlers.py
backend/app/agents/: __init__.py  base.py  clause_extraction.py  contract_qa.py  contract_reference_extraction.py  intent_router.py  metadata_extraction.py  obligation_tracking.py  regulatory_extraction.py  renewal_monitoring.py  risk_detection.py  sla_extraction.py
backend/app/connectors/: __init__.py  base.py  fx_stub.py  milestone_stub.py  servicenow_stub.py
backend/app/core/: audit.py  deps.py  logging.py  middleware.py  pagination.py  security.py  tenant.py
backend/app/generators/: __init__.py  synthetic_data.py
backend/app/integrations/: __init__.py  base.py  email.py  salesforce.py  servicenow.py  ses.py  sharepoint.py  teams.py
backend/app/models/: __init__.py  alert.py  approval.py  (+55 more)
backend/docs/: ARCHITECTURE_OVERVIEW.md  KNOWLEDGE_GRAPH_DESIGN.md
backend/scripts/: anonymize_contracts.py  backfill_highlights.py  benchmark_cuad.py  bootstrap_db.py  check_progress.py  clear_seed_data.py  fix_demosup_links.py  generate_laptop_contract.py  import_cuad.py  recalc_health_scores.py  reextract_metadata.py  reindex_all.py  reindex_clauses.py  reprocess_all_contracts.py  reprocess_failed.py  rerun_autolink.py  run_extraction_eval.py  run_hierarchy_detection.py  run_risk_detection.py  seed_bu_users.py  seed_business_units.py  seed_compliance_rules.py  seed_contract_distribution.py  seed_data.py  seed_demo.py  seed_enterprise_integrations.py  seed_fitgap.py  seed_industry_profiles.py  seed_kr8_relationship.py  seed_more_contracts.py  seed_perception_scores.py  seed_project_tasks.py  seed_relationship_governance.py  seed_servicenow.py  seed_users.py  seed_workflows.py  setup_demo.sh  setup_ses.py  test_extraction.py  test_sla_extraction.py  (+3 more)
backend/tests/: conftest.py  test_auth.py  test_bu_scoping.py  test_business_units.py  test_contract_documents.py  test_external_access.py  test_kpi_approval.py  test_kpi_workflow.py  test_organization_hierarchy.py  test_organization_officers.py  test_relationship_history.py  test_service_portfolio.py  test_tenant_isolation.py
mock-enterprise/: Dockerfile  pyproject.toml
mock-enterprise/app/: db.py  main.py  models.py  seed.py
(+656 files in other folders)
