[project]
name = "contract-intelligence-backend"
version = "0.1.0"
description = "AI-powered Contract Intelligence Platform - Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # Pydantic for data validation and settings
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    # Vector Store
    "chromadb>=0.4.22",
    # AI/ML - OpenAI + DSPy
    "openai>=1.10.0",
    "dspy>=2.6.0",
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    # Document Processing
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "pytesseract>=0.3.10",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    # Utilities
    "greenlet>=3.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.0",
    "psutil>=5.9.0",
    "pytest-asyncio>=1.3.0",
    # AWS
    "boto3>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_asyncio]
mode = "auto"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
