[project]
name = "mock-enterprise"
version = "0.1.0"
description = "Mock enterprise system APIs (Salesforce, Workday, SAP, ServiceNow, Qualtrics, Datadog) for CLM integration testing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "faker>=28.0.0",
]

[project.scripts]
seed = "app.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
